new: sliding window posterior sum at all times

--- a/jupyter-notebooks/Decoding_functionalized_MEC.ipynb
+++ b/jupyter-notebooks/Decoding_functionalized_MEC.ipynb
@@ -1630,22 +1630,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 5, 7, 8, 9, 10, 11, 12, 14, 15, 16, 18, 19, 20, 22, 23, 24, 25, 27, 28, 29]\n"
+      "[2, 3, 7, 16]\n"
      ]
     }
    ],
    "source": [
     "## Define parameters\n",
-    "rat_name = 'fievel'\n",
-    "day =  19    #previously:{'remy':[20], 'gus':[28], 'bernard':[23], 'fievel':[19]}\n",
-    "epoch = 4  # previously:{'remy':[4], 'gus':[2], 'bernard':[4], 'fievel':[2]} \n",
+    "rat_name = 'remy'\n",
+    "day =  20    #previously:{'remy':[20], 'gus':[28], 'bernard':[23], 'fievel':[19]}\n",
+    "epoch = 2  # previously:{'remy':[4], 'gus':[2], 'bernard':[4], 'fievel':[2]} \n",
     "# bill 12-18-19: day 7 epoch 2\n",
     "\n",
     "# define data source filepaths\n",
@@ -1653,7 +1653,7 @@
     "path_base = '/stelmo/anna/'\n",
     "raw_directory = path_base + rat_name + '/filterframework/'\n",
     "#raw_directory = path_base + 'raw_data/' + rat_name + '/'\n",
-    "output_directory = '/stelmo/anna/fievel/filterframework/decoding/'\n",
+    "output_directory = '/stelmo/anna/remy/filterframework/decoding/'\n",
     "#output_directory = '/stelmo/mcoulter/bill/filterframework/'\n",
     "day_ep = str(day) + '_' + str(epoch)\n",
     "\n",
@@ -1664,8 +1664,8 @@
     "\n",
     "# if you want all ca1 tets with no deadchans, set tetlist to None. otherwise, specify list\n",
     "\n",
-    "tetlist = None\n",
-    "#tetlist = [4,11]\n",
+    "#tetlist = None\n",
+    "tetlist = [2,3,7,16]\n",
     "\n",
     "# how do we add dead channel annotation to filterframework?\n",
     "\n",
@@ -1697,19 +1697,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Duplicate marks found (and removed): 0\n",
-      "original length: 1959617\n",
-      "0 above 2000uV events removed\n",
-      "0 below 100uV events removed\n",
-      "6 below -999uV events removed\n",
-      "after filtering: 1959611\n"
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'times'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-6586ffc38406>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m                        [epoch], tetrodes)\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Import marks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mmarks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatasrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimport_marks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'original length: '\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmarks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# OPTIONAL: to reduce mark number, can filter by size. Current detection threshold is 100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/spykshrk_realtime/trodes2SS.py\u001b[0m in \u001b[0;36mimport_marks\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     99\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m                                 \u001b[0;32mfor\u001b[0m \u001b[0mtet\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtetrodes\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 101\u001b[0;31m                                         \u001b[0mmarktimes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmarkmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'marks'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mday\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mep\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtet\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimes\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    102\u001b[0m                                         \u001b[0mmarktimes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmarktimes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint64\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    103\u001b[0m                                         \u001b[0mmarks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmarkmat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'marks'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mday\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mep\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtet\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmarks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'times'"
      ]
     }
    ],
