--- a/jupyter-notebooks/MEC_error_calculation.ipynb
+++ b/jupyter-notebooks/MEC_error_calculation.ipynb
@@ -3580,6 +3580,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 501,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[68, 172, 190, 103]\n",
+      "2\n",
+      "[67, 172, 190, 84]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# new mark calculation: take max across all 4 channels, then take 4 values at that bin\n",
+    "spike_1 = [[   0,  -15,   -9,    0,  -13,  -17,  -20,  -28,  -38,  -43,  -16,    3,   24,   67,\n",
+    "    68,   33,  -10,   -5,   -7,  -35,  -44,  -48,  -61,  -78,  -73,  -39,  -23,  -28,\n",
+    "   -19,   23,   26,   -6,    6,   31,   14,   10,   25,   44,   40,   34],\n",
+    " [  19,   22,   21,    5,  -29,  -39,  -24,  -15,  -33,  -51,  -29,    7,   91,  172,\n",
+    "   116,    9,  -63,  -52,  -40,  -57,  -63,  -69,  -94, -127, -113,  -65,  -54,  -59,\n",
+    "   -49,   -3,   13,   -6,   16,   32,    5,   15,   69,   94,   66,   43],\n",
+    " [  20,    7,    4,    0,  -21,  -17,  -11,  -20,  -23,  -38,  -24,   12,  102,  190,\n",
+    "   146,   48,  -38,  -55,  -39,  -48,  -58,  -70, -103, -139, -124,  -82,  -71,  -69,\n",
+    "   -49,   -3,    9,  -15,    1,   19,    9,   44,   82,   72,   36,   20],\n",
+    " [   3,   -8,  -10,  -13,  -19,  -12,  -11,  -14,  -25,  -40,  -22,    0,   19,   84,\n",
+    "   103,   67,    7,  -16,  -30,  -56,  -63,  -68,  -77,  -91,  -82,  -47,  -36,  -43,\n",
+    "   -37,    2,   22,    8,   33,   40,   23,   19,   22,   24,   19,   19]]\n",
+    "mark = [max(x) for x in spike_1]\n",
+    "print(mark)\n",
+    "max_0 = max(spike_1[0])\n",
+    "max_1 = max(spike_1[1])\n",
+    "max_2 = max(spike_1[2])\n",
+    "max_3 = max(spike_1[3])\n",
+    "max_channel = np.argmax([max_0,max_1,max_2,max_3])\n",
+    "print(max_channel)\n",
+    "max_0_ind = np.argmax(spike_1[0])\n",
+    "max_1_ind = np.argmax(spike_1[1])\n",
+    "max_2_ind = np.argmax(spike_1[2])\n",
+    "max_3_ind = np.argmax(spike_1[3])\n",
+    "max_1_ind\n",
+    "if max_channel == 0:\n",
+    "    amp_marks = [spike_1[0][max_0_ind],spike_1[1][max_0_ind],spike_1[2][max_0_ind],spike_1[3][max_0_ind]]\n",
+    "elif max_channel == 1:\n",
+    "    amp_marks = [spike_1[0][max_1_ind],spike_1[1][max_1_ind],spike_1[2][max_1_ind],spike_1[3][max_1_ind]]\n",
+    "elif max_channel == 2:\n",
+    "    amp_marks = [spike_1[0][max_2_ind],spike_1[1][max_2_ind],spike_1[2][max_2_ind],spike_1[3][max_2_ind]]\n",
+    "elif max_channel == 3:\n",
+    "    amp_marks = [spike_1[0][max_3_ind],spike_1[1][max_3_ind],spike_1[2][max_3_ind],spike_1[3][max_3_ind]]\n",
+    "print(amp_marks)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 489,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 489,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spike_1 = [[1, 2],[2, 3],[3, 4],[4, 5]]\n",
+    "spike_1\n",
+    "mark = [max(x) for x in spike_1]\n",
+    "mark"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 176,
    "metadata": {},
    "outputs": [
