fix prob no spike so it uses tets with no spike in decoder bin

--- a/jupyter-notebooks/MEC_error_calculation.ipynb
+++ b/jupyter-notebooks/MEC_error_calculation.ipynb
@@ -791,35 +791,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 4  6 10 14] 4 [[0. 0. 0. 0.]]\n"
+      "[ 4  6 10 14] 4 [[False False False False]]\n",
+      "no spikes\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "#need to convert encoder_data11 to marks input for offline\n",
-    "tet_list = np.asarray([4,6,10,14])\n",
+    "tet_list = []\n",
+    "tet_list1 = [4,6,10,14]\n",
+    "tet_list = np.asarray(tet_list1)\n",
     "x = 4\n",
-    "tets_with_spikes = np.zeros((1,4))\n",
+    "y = 6\n",
+    "tets_with_spikes = np.zeros((1,4),dtype=np.bool)\n",
     "print(tet_list, x, tets_with_spikes)\n",
-    "tets_with_spikes[0][np.where(tet_list == x)] = 1\n",
-    "tets_with_spikes"
+    "tets_with_spikes[0][np.where(tet_list == x)] = True\n",
+    "tet_list[~tets_with_spikes[0]]\n",
+    "#tets_with_spikes[0]\n",
+    "#len(tets_with_spikes)\n",
+    "if y in tet_list[~tets_with_spikes[0]]:\n",
+    "    print('no spikes')"
    ]
   },
   {
